--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://willrankin.dev",
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@tailwindcss/cli": "^4.1.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev-tailwind": "npx @tailwindcss/cli -i ./src/styles/tailwind.css -o ./src/styles/tailwind-output.css --watch",
+    "build-tailwind": "npx @tailwindcss/cli -i ./src/styles/tailwind.css -o ./src/styles/tailwind-output.css --minify",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
+
+    "start": "npm-run-all -p dev-tailwind start-react",
+    "build": "npm-run-all build-tailwind build-react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -45,6 +51,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.1.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   }
 }
